feat: add Workspace Client SDK (#56)
* docs: specify workspace client sdk

* feat: add workspace client sdk
